# sdkwork-manager

./: .env.postgres.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/workflows/: package.yml
apis/app-api/manager/: manager-app-api.openapi.json
apis/backend-api/manager/: manager-backend-api.openapi.json
apps/: README.md
apps/sdkwork-manager-common/: README.md
apps/sdkwork-manager-pc/: .env.development.example  .env.example  .env.production.example  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  visual-harness.html  vite.config.ts
apps/sdkwork-manager-pc/docs/: INDEX.yaml  README.md
apps/sdkwork-manager-pc/etc/: README.md  browser.runtime.json  sdkwork.deployment.config.json
apps/sdkwork-manager-pc/specs/: component.spec.json
apps/sdkwork-manager-pc/src/: index.css  main.tsx  styles.css  visualHarness.tsx
apps/sdkwork-manager-pc/tests/: admin-editor-layout.test.ts  iam-foundation.test.ts  iam-layout.test.ts  payment-layout.test.ts  theme-preference.test.ts
configs/: sdkwork-api-cloud-gateway.manager.development.toml  sdkwork-api-cloud-gateway.manager.production.toml
configs/topology/: README.md  cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  cloud.unified-process.development.env  cloud.unified-process.production.env  standalone.development.env  standalone.production.env  standalone.split-services.development.env  standalone.split-services.production.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/sdkwork-api-manager-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-manager-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-manager-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-manager-standalone-gateway/: Cargo.toml
crates/sdkwork-api-manager-standalone-gateway/specs/: component.spec.json
crates/sdkwork-api-manager-standalone-gateway/src/: iam_application_bootstrap.rs  main.rs
crates/sdkwork-manager-database-host/: Cargo.toml
crates/sdkwork-manager-database-host/src/: lib.rs
crates/sdkwork-manager-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-manager-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-manager-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-manager-service-host/: Cargo.toml
crates/sdkwork-manager-service-host/src/: lib.rs
crates/sdkwork-manager-standalone-gateway/: Cargo.toml
crates/sdkwork-manager-standalone-gateway/specs/: component.spec.json
crates/sdkwork-manager-standalone-gateway/src/: main.rs
crates/sdkwork-platform-manager-repository-sqlx/: Cargo.toml
crates/sdkwork-platform-manager-repository-sqlx/src/: lib.rs
crates/sdkwork-platform-manager-service/: Cargo.toml
crates/sdkwork-platform-manager-service/src/: domain.rs  lib.rs  ports.rs  service.rs
crates/sdkwork-routes-manager-app-api/: Cargo.toml
crates/sdkwork-routes-manager-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-manager-app-api/src/: handlers.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-manager-backend-api/: Cargo.toml
crates/sdkwork-routes-manager-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-manager-backend-api/src/: handlers.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-manager-common/: Cargo.toml
crates/sdkwork-routes-manager-common/src/: envelope.rs  lib.rs  response.rs
crates/sdkwork-routes-manager-common/tests/: response_envelope.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
database/migrations/postgres/: 0002_manager_commercial_entitlements.down.sql  0002_manager_commercial_entitlements.up.sql
database/migrations/sqlite/: 0002_manager_commercial_entitlements.down.sql  0002_manager_commercial_entitlements.up.sql
database/seeds/common/: 001_bootstrap.sql
deployments/: deploy.yaml
docs/: INDEX.yaml  README.md
docs/architecture/decisions/: ADR-20260719-manager-drive-pool-driver-migration.md
docs/architecture/tech/: TECH-unified-admin-host.md  TECH_ARCHITECTURE.md
docs/guides/developer/: README.md
docs/product/prd/: PRD.md
docs/runbooks/: LAUNCH_READINESS.md  README.md
etc/: README.md  sdkwork-api-cloud-gateway.manager.development.toml  sdkwork-api-cloud-gateway.manager.production.toml  sdkwork.deployment.config.json
etc/deployments/: cloud.development.env  cloud.production.env  standalone.development.env  standalone.production.env
scripts/dev/: manager-bootstrap.mjs  manager-dev.mjs  manager-iam-application-bootstrap-standard.test.mjs  manager-payment-database-bootstrap-standard.test.mjs  manager-profile-env.mjs  manager-start.mjs  manager-wsl-postgres-portproxy.mjs  refresh-wsl-postgres-portproxy.ps1
scripts/release/: browser-release-sbom.mjs  cloud-config-sbom.mjs  manager-release-lifecycle.mjs  manager-release-standard.test.mjs  package-manager-server.mjs  validate-manager-release.mjs
sdks/_route-manifests/app-api/: sdkwork-routes-manager-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-routes-manager-backend-api.route-manifest.json
sdks/sdkwork-manager-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-manager-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
specs/: README.md  component.spec.json  iam.module.manifest.json  process-database-pool.spec.json  topology.spec.json
tests/static/: manager-architecture.test.mjs
tools/: README.md  manager_openapi_export.mjs  manager_route_manifest_export.mjs  manager_sdk_generate.mjs  scaffold_manager_workspace.mjs
(+21 files in other folders)
