[workspace]
resolver = "2"
members = [
    "crates/sdkwork-manager-gateway-assembly",
    "crates/sdkwork-routes-manager-common",
  "crates/sdkwork-platform-manager-service",
  "crates/sdkwork-platform-manager-repository-sqlx",
  "crates/sdkwork-routes-manager-app-api",
  "crates/sdkwork-routes-manager-backend-api",
  "crates/sdkwork-manager-database-host",
    "crates/sdkwork-manager-service-host",
    "crates/sdkwork-manager-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork_iam_gateway_assembly = { package = "sdkwork-iam-gateway-assembly", path = "../sdkwork-iam/crates/sdkwork-iam-gateway-assembly" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork_platform_manager_service = { path = "crates/sdkwork-platform-manager-service", package = "sdkwork-platform-manager-service" }
sdkwork_platform_manager_repository_sqlx = { path = "crates/sdkwork-platform-manager-repository-sqlx", package = "sdkwork-platform-manager-repository-sqlx" }
sdkwork_routes_manager_common = { path = "crates/sdkwork-routes-manager-common", package = "sdkwork-routes-manager-common" }
sdkwork_routes_manager_app_api = { path = "crates/sdkwork-routes-manager-app-api", package = "sdkwork-routes-manager-app-api" }
sdkwork_routes_manager_backend_api = { path = "crates/sdkwork-routes-manager-backend-api", package = "sdkwork-routes-manager-backend-api" }
sdkwork_manager_database_host = { path = "crates/sdkwork-manager-database-host", package = "sdkwork-manager-database-host" }
sdkwork_manager_gateway_assembly = { path = "crates/sdkwork-manager-gateway-assembly", package = "sdkwork-manager-gateway-assembly" }
sdkwork_manager_service_host = { path = "crates/sdkwork-manager-service-host", package = "sdkwork-manager-service-host" }
