[package]
name = "sdkwork-api-manager-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-manager application HTTP plane."

[lib]
name = "sdkwork_api_manager_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_manager_service_host.workspace = true
sdkwork_iam_gateway_assembly.workspace = true
sdkwork_drive_gateway_assembly.workspace = true
sdkwork_order_gateway_assembly.workspace = true
sdkwork_promotion_gateway_assembly.workspace = true
sdkwork_payment_gateway_assembly.workspace = true
sdkwork_membership_gateway_assembly.workspace = true
sdkwork-routes-manager-app-api.workspace = true
sdkwork-routes-manager-backend-api.workspace = true
