[package]
name = "sdkwork-api-manager-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-manager application HTTP plane."

[lib]
name = "sdkwork_api_manager_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_manager_service_host.workspace = true
sdkwork_api_iam_assembly.workspace = true
sdkwork_api_drive_assembly.workspace = true
sdkwork_api_order_assembly.workspace = true
sdkwork_api_promotion_assembly.workspace = true
sdkwork_api_payment_assembly.workspace = true
sdkwork_api_membership_assembly.workspace = true
sdkwork-routes-manager-app-api.workspace = true
sdkwork-routes-manager-backend-api.workspace = true
