[package]
name = "sdkwork-api-manager-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true


[[bin]]
name = "manager-server"
path = "src/main.rs"

[dependencies]
sdkwork_api_manager_assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork_manager_service_host.workspace = true
sdkwork_iam_embedded_application_bootstrap.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork-database-sqlx.workspace = true
