[package]
name = "sdkwork-manager-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-manager application HTTP plane."

[lib]
name = "sdkwork_manager_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork_manager_service_host.workspace = true
sdkwork_iam_gateway_assembly.workspace = true
sdkwork_drive_gateway_assembly.workspace = true
sdkwork_order_gateway_assembly.workspace = true
sdkwork_promotion_gateway_assembly.workspace = true
sdkwork_payment_gateway_assembly.workspace = true
sdkwork_membership_gateway_assembly.workspace = true
sdkwork_routes_manager_app_api.workspace = true
sdkwork_routes_manager_backend_api.workspace = true
