[package]
name = "sdkwork-manager-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_platform_manager_repository_sqlx.workspace = true
sdkwork_platform_manager_service.workspace = true
sdkwork_database_sqlx.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_manager_database_host.workspace = true
