[package]
name = "sdkwork-manager-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_platform_manager_repository_sqlx.workspace = true
sdkwork_platform_manager_service.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-database-spi.workspace = true
sdkwork_manager_database_host.workspace = true
