[package]
name = "sdkwork-manager-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true


[[bin]]
name = "manager-server"
path = "src/main.rs"

[dependencies]
sdkwork_manager_gateway_assembly = { package = "sdkwork-manager-gateway-assembly", path = "../sdkwork-manager-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork_manager_service_host.workspace = true
